[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"
rand = "0.8.0"
regex = "1.4.2"
sscanf = { git = "https://github.com/mich101mich/sscanf" }
permutohedron = "0.2.4"
num = "0.4.0"
